--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,8 @@
     <div class="header-inner">
         <!-- BEGIN LOGO -->
         <!--  <a class="navbar-brand" > -->
-        <div ng-controller="SearchFormController" onmouseover="ShowUpdateLogo()" onmouseout="HideupdateLogo()" style="display:inline-block;float:left">
+        <div ng-controller="SearchFormController" onmouseover="ShowUpdateLogo()" onmouseout="HideupdateLogo()"
+             style="display:inline-block;float:left">
             <a class="navbar-brand" href="/apps/{{ sales_app.key.id() }}">
 
                 {% if logo != None %}
@@ -62,7 +63,8 @@
 
             {% if user.is_admin and logo == None %}
                 <span id="update_logo_pan" class="update-Logo" ng-click="createPickerUploader()" style="display:none;">
-                                    <img src="/static/img/upload_logo.png" style="margin-left: -2px;padding: 2px;width: 24px;"> {{ _('UpLoad your Logo') }}
+                                    <img src="/static/img/upload_logo.png"
+                                         style="margin-left: -2px;padding: 2px;width: 24px;"> {{ _('UpLoad your Logo') }}
           </span>
             {% endif %}
         </div>
@@ -84,7 +86,8 @@
                            </div> -->
                     <input type="text" ng-class="{'spinner':resultsLoading}" ng-model="searchQuery"
                            typeahead="result as result.title + ' (' + result.type + ')' for result in getResults($viewValue) | filter:$viewValue | limitTo:8"
-                           typeahead-on-select="selectResult()" class="form-control" typeahead-loading="resultsLoading" placeholder="{{ _('Search') }}"
+                           typeahead-on-select="selectResult()" class="form-control" typeahead-loading="resultsLoading"
+                           placeholder="{{ _('Search') }}"
                            style="padding-left: 10px;">
                 </div>
                 <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>
@@ -473,32 +476,32 @@
 
     var iogrow = {};
     iogrow.ioStorageCache = {
-        read: function(key){
+        read: function (key) {
             var data = {};
             if (typeof(Storage) != "undefined") {
                 data = JSON.parse(localStorage.getItem(key));
-                if (data == null){
+                if (data == null) {
                     data = {};
                 }
             }
             return data;
         },
-        write: function(key,data){
+        write: function (key, data) {
             if (typeof(Storage) != "undefined") {
-                localStorage[key]=JSON.stringify(data);
+                localStorage[key] = JSON.stringify(data);
             }
         },
-        renderIfUpdated: function(key,newData,callback){
+        renderIfUpdated: function (key, newData, callback) {
             if (typeof(Storage) != "undefined") {
                 var existingData = localStorage[key];
                 var stringifyNewData = JSON.stringify(newData);
-                if (typeof(existingData) === 'undefined'){
+                if (typeof(existingData) === 'undefined') {
                     console.log('new new');
-                    this.write(key,newData);
+                    this.write(key, newData);
                     callback(newData);
-                }else if((existingData.length!=stringifyNewData.length) || (existingData==='{}')){
+                } else if ((existingData.length != stringifyNewData.length) || (existingData === '{}')) {
                     console.log('new new');
-                    this.write(key,newData);
+                    this.write(key, newData);
                     callback(newData);
                 }
             }
@@ -506,53 +509,55 @@
         }
     };
 
-  </script>
-  <script src="https://apis.google.com/js/client.js?onload=loadGapi">
-  </script>
-  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+</script>
+<script src="https://apis.google.com/js/client.js?onload=loadGapi">
+</script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
-  <!-- Keen IO support -->
+<!-- Keen IO support -->
 
- <script type="text/javascript">
-function ShowUpdateLogo(){
+<script type="text/javascript">
+    function ShowUpdateLogo() {
 
-try {
-   
-    var logoPan=document.getElementById("update_logo_pan");
-        logoPan.style.display="inline"
-}
-catch (e) {} 
-   
-}
+        try {
 
-function HideupdateLogo(){
+            var logoPan = document.getElementById("update_logo_pan");
+            logoPan.style.display = "inline"
+        }
+        catch (e) {
+        }
 
-   try{
-    var logoPan=document.getElementById("update_logo_pan");
-        logoPan.style.display="none";
+    }
 
-   }catch(e){}
-    
-         
-}
-var created_at = new Date("{{user.created_at}}");
-console.log('-----:)------');
-console.log('1234567890');
-console.log(created_at.getTime()/1000);
-$(document).ready(function() {
-    window.Intercom('boot', {
-      app_id: "s9iirr8w",
-      // TODO: The current logged in user's full name
-      name: "{{user.google_display_name}}",
-      // TODO: The current logged in user's email address.
-      email: "{{user.email}}",
-      gid:"{{user.google_user_id}}",
-      completed_tour: '{{user.completed_tour}}',
-      oranization:'{{organization_name}}',
-      // TODO: The current logged in user's sign-up date as a Unix timestamp.
-      created_at: created_at.getTime()/1000
-});
-});
+    function HideupdateLogo() {
+
+        try {
+            var logoPan = document.getElementById("update_logo_pan");
+            logoPan.style.display = "none";
+
+        } catch (e) {
+        }
+
+
+    }
+    var created_at = new Date("{{user.created_at}}");
+    console.log('-----:)------');
+    console.log('1234567890');
+    console.log(created_at.getTime() / 1000);
+    $(document).ready(function () {
+        window.Intercom('boot', {
+            app_id: "s9iirr8w",
+            // TODO: The current logged in user's full name
+            name: "{{user.google_display_name}}",
+            // TODO: The current logged in user's email address.
+            email: "{{user.email}}",
+            gid: "{{user.google_user_id}}",
+            completed_tour: '{{user.completed_tour}}',
+            oranization: '{{organization_name}}',
+            // TODO: The current logged in user's sign-up date as a Unix timestamp.
+            created_at: created_at.getTime() / 1000
+        });
+    });
 </script>
 
 <script type="text/javascript" src="/static/plugins/bootstrap-wizard/jquery.bootstrap.wizard.js"></script>
@@ -779,7 +784,7 @@ $(document).ready(function() {
 <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js"
         async></script>-->
 <script type="text/javascript" src="/static/plugins/angular-sortable-view.min.js" async></script>
-       
+
 <script type="text/javascript" src="/static/plugins/datetimepicker-master/jquery.datetimepicker.js" async></script>
 <!-- test
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
