--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1128,51 +1128,68 @@
                                 <div class="news-blocks blank-card blank-card-gray newsCard">
                                                         <span class="page-meta pull-right">
                                                     <button type="button" ng-click="showEditCustomFields=false" ng-show="showEditCustomFields" class="btn red btn-sm pull-right btn-inline">Save</button>
-                                                    <a ng-click="showEditCustomFields=true" ng-hide="showEditCustomFields" class="btn-link addAnotherPhone" data-toggle="modal"></i> {{_('Add')}} </a> 
+                                                    <a ng-click="showEditCustomFields=true"
+                                                       ng-hide="showEditCustomFields" class="btn-link addAnotherPhone"
+                                                       data-toggle="modal"></i> {{_('Add')}} </a>
                                                 </span>
 
                                     <h3 style="margin-top:0px">{{ _('Custom Fields') }}</h3>
-                                      <ul class="list-unstyled contact-infos showList">   
-                              
-                              <li ng-repeat="custom in infonodes.customfields">
-                                 
-                                   <form editable-form name="editableCustomFieldForm" onbeforesave="inlinePatch('Infonode','customfields', custom.fields[0].field,custom.entityKey,custom.fields[0].value)" class="customFieldForm"> 
-                                      <i class="fa fa-gear" ng-hide="editableCustomFieldForm.$visible"></i>
-                                      <span  editable-text="custom.fields[0].field" e-name="field">
+                                    <ul class="list-unstyled contact-infos showList">
+
+                                        <li ng-repeat="custom in infonodes.customfields">
+
+                                            <form editable-form name="editableCustomFieldForm"
+                                                  onbeforesave="inlinePatch('Infonode','customfields', custom.fields[0].field,custom.entityKey,custom.fields[0].value)"
+                                                  class="customFieldForm">
+                                                <i class="fa fa-gear" ng-hide="editableCustomFieldForm.$visible"></i>
+                                      <span editable-text="custom.fields[0].field" e-name="field">
                                           <%= custom.fields[0].field%>  : </span>
-                                      <span e-name="value" editable-text="custom.fields[0].value">   <%= custom.fields[0].value%> </span>
+                                                <span e-name="value" editable-text="custom.fields[0].value">   <%= custom.fields[0].value%> </span>
                                       <span class="page-meta ng-scope" ng-hide="editableCustomFieldForm.$visible">
-                                          <a ng-click="editableCustomFieldForm.$show()" class="btn-link addAnotherPhone"><i class="fa fa-pencil"></i></a>
+                                          <a ng-click="editableCustomFieldForm.$show()"
+                                             class="btn-link addAnotherPhone"><i class="fa fa-pencil"></i></a>
                                       </span>
                                       <span class="page-meta ng-scope" ng-hide="editableCustomFieldForm.$visible">
-                                          <a ng-click="deleteInfonode(custom.entityKey,'customfields')" class="btn-link addAnotherPhone" ><i class="fa fa-trash-o"></i></a>
+                                          <a ng-click="deleteInfonode(custom.entityKey,'customfields')"
+                                             class="btn-link addAnotherPhone"><i class="fa fa-trash-o"></i></a>
                                       </span>
                                        <span ng-show="editableCustomFieldForm.$visible">
-                                          <button type="submit" class="btn btn-primary" ng-disabled="editableCustomFieldForm.$waiting">
-                                            Save
+                                          <button type="submit" class="btn btn-primary"
+                                                  ng-disabled="editableCustomFieldForm.$waiting">
+                                              Save
                                           </button>
-                                          <button type="button" class="btn btn-default" ng-disabled="editableCustomFieldForm.$waiting" ng-click="editableCustomFieldForm.$cancel()">
-                                            Cancel
+                                          <button type="button" class="btn btn-default"
+                                                  ng-disabled="editableCustomFieldForm.$waiting"
+                                                  ng-click="editableCustomFieldForm.$cancel()">
+                                              Cancel
                                           </button>
                                         </span>
-                                     </form>
-                              </li>
-                             
-                              <li ng-show="showEditCustomFields|| isEmptyArray(infonodes.customfields)">
-                                  <div class="">
-                                      <form class="form-inline newLeadForm" role="form">
-                                          <div class="form-group " style="width:49%">
-                                              <label class="sr-only" for="exampleInputEmail2">{{_('Field')}}</label>
-                                              <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="{{_('Enter field name')}}">
-                                          </div>
-                                          <div  class="form-group" style="width:49%">
-                                              <label class="sr-only" for="exampleInputEmail2">{{_('Value')}}</label>
-                                              <input type="text" ng-enter="addCustomField(customfield)" ng-blur="addCustomField(customfield)" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="{{_('Enter a value')}}" >
-                                          </div>
-                                      </form>
-                                  </div>
-                              </li>
-                          </ul>
+                                            </form>
+                                        </li>
+
+                                        <li ng-show="showEditCustomFields|| isEmptyArray(infonodes.customfields)">
+                                            <div class="">
+                                                <form class="form-inline newLeadForm" role="form">
+                                                    <div class="form-group " style="width:49%">
+                                                        <label class="sr-only"
+                                                               for="exampleInputEmail2">{{_('Field')}}</label>
+                                                        <input type="text" class="form-control" id="exampleInputEmail2"
+                                                               ng-model="customfield.field"
+                                                               placeholder="{{_('Enter field name')}}">
+                                                    </div>
+                                                    <div class="form-group" style="width:49%">
+                                                        <label class="sr-only"
+                                                               for="exampleInputEmail2">{{_('Value')}}</label>
+                                                        <input type="text" ng-enter="addCustomField(customfield)"
+                                                               ng-blur="addCustomField(customfield)"
+                                                               class="form-control" id="exampleInputEmail2"
+                                                               ng-model="customfield.value"
+                                                               placeholder="{{_('Enter a value')}}">
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
 
 
