--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -514,7 +514,9 @@
           <input  class="checkboxOnSmallScreen" title="Select Case" style="top: -1px;position: absolute;left: 4px;z-index: 999;" type="checkbox" ng-checked="isSelectedCard(casee)" ng-click="selectCardwithCheck($event,$index,casee)" >
           <div class="caseContent">
               <div class="col-md-3 col-xs-3 col-pic">
-                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="<%= casee.name %>"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" src="/static/img/default_company.png" >
+                  <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="<%= casee.name %>"><img
+                          ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img"
+                          src="/static/img/default_company.png">
                 <img ng-show="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" ng-src="https://docs.google.com/uc?id=<%= casee.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
@@ -606,7 +608,7 @@
       <div class="portlet showCard fixedCard ">
         <div class="portlet-title">
           <div class="caption">
-                  <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{ _('Tags')}}
+              <!-- class="fa fa-reorder"--><i class="fa fa-tags" style="font-size: 16px;"></i>{{ _('Tags')}}
           </div>
         </div>
         <div class="portlet-body">
