--- a/templates/opportunit_new.html
+++ b/templates/opportunit_new.html
@@ -256,7 +256,12 @@
                                           <div class="col-md-12" ng-class="{ 'has-error': oppo_err.account && oppo_err.contact }" >
                                            <div class="input-icon">
                                              <i class="fa fa-building"></i>
-                                             <input type="text" required  ng-class="{'spinner':acResultsLoading}"ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in getResults($viewValue) | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}" typeahead-loading="acResultsLoading">
+                                               <input type="text" required ng-class="{'spinner':acResultsLoading}"
+                                                      ng-model="searchAccountQuery"
+                                                      typeahead="accountResult as accountResult.name  for accountResult in getResults($viewValue) | filter:$viewValue | limitTo:10"
+                                                      typeahead-on-select="selectAccount()" class="form-control"
+                                                      placeholder="{{_('Account')}}"
+                                                      typeahead-loading="acResultsLoading">
                                            </div>
                                           </div>
                                         </div>
@@ -477,50 +482,57 @@
                                     <a href="" ng-click="showAddEventPopup()" style="cursor:pointer">
                                         + <i class="fa fa-calendar" style="font-size:13px"></i>  Add Time scale</a>
                                    <!-- <textarea ng-model="opportunity.time_scale" class="form-control" rows="3" ></textarea>-->
-                                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
-                                      <li ng-repeat="event in timescale" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
-                                        <div class="event-container">
-                                          <div class="showDescription">
+                                       <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                                           <li ng-repeat="event in timescale" id="event_<%=$index%>"
+                                               class="relatedEventItem" ng-mouseenter="showDeleteBtn = true"
+                                               ng-mouseleave="showDeleteBtn = false">
+                                               <div class="event-container">
+                                                   <div class="showDescription">
                                             <span class="relatedEventTitle">
                                               <a href="/#/events/show/<%=event.id%>" class="">
-                                                <%= event.title%>
+                                                  <%= event.title%>
                                               </a>
                                             </span>
-                                            <a class="pull-right relatedEventMoreBtn">
-                                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
-                                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
-                                            </a>
-                                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteEvent(event)">
-                                              <i class="fa fa fa-times-circle"></i>
-                                            </a>
-                                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="event.starts_at" title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
+                                                       <a class="pull-right relatedEventMoreBtn">
+                                                           <i class="fa fa-chevron-right" ng-hide="showDetails"
+                                                              ng-click="showDetails=true"></i>
+                                                           <i class="fa fa-chevron-down" ng-show="showDetails"
+                                                              ng-click="showDetails=false"></i>
+                                                       </a>
+                                                       <a class="pull-left relatedEventDeleteBtn"
+                                                          ng-show="showDeleteBtn" ng-click="deleteEvent(event)">
+                                                           <i class="fa fa fa-times-circle"></i>
+                                                       </a>
+                                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails"
+                                                  ng-show="event.starts_at"
+                                                  title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
                                                   <%= event.starts_at | date:'dd MMM'%>
                                             </span>
-                                          </div>
-                                          <div class="moreDetails row" ng-show="showDetails">
-                                            <div class="col-md-5 col-xs-5 event-schedule">
+                                                   </div>
+                                                   <div class="moreDetails row" ng-show="showDetails">
+                                                       <div class="col-md-5 col-xs-5 event-schedule">
                                                 <span class=""><i class="fa fa-calendar"></i>
                                                 <%= event.starts_at | date:'dd MMM'%> </span>
-                                            </div>
-                                            <div class="col-md-2 col-xs-2 event-schedule">
-                                                <i class="fa fa-chevron-right"></i>
-                                            </div>
-                                            <div class="col-md-5 col-xs-5 event-schedule">
+                                                       </div>
+                                                       <div class="col-md-2 col-xs-2 event-schedule">
+                                                           <i class="fa fa-chevron-right"></i>
+                                                       </div>
+                                                       <div class="col-md-5 col-xs-5 event-schedule">
                                                <span class="">
                                                   <i class="fa fa-calendar"></i>
                                                   <%= event.ends_at | date:'dd MMM'%>
                                                 </span>
-                                            </div>
-                                            <div class="col-md-12">
+                                                       </div>
+                                                       <div class="col-md-12">
                                                <span class="">
                                                   <i class="fa fa-map-marker"></i>
                                                   <%= event.where %>
                                                 </span>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </li>
-                                  </ul>
+                                                       </div>
+                                                   </div>
+                                               </div>
+                                           </li>
+                                       </ul>
                                   </div>
                                 </div>
                               </div>
@@ -592,8 +604,8 @@
                                            <%= contact.firstname||contact.full_name %> <%= contact.lastname %> <%= contact.title%> 
                                           </span>                                                                          
                                          <button type="button" class="close closeContactForm" tabindex='-1' ng-click="pullFromArray($index, contact, contacts)" data-dismiss="alert"></button>
-                                        
-                                         <div class="pull-right">
+
+                                          <div class="pull-right">
 
                                           <p class="" style="line-height: 24px;display: inline-block;float: left;" ng-class="{ 'decisioncheck':contact.decision_maker}">
                                           
@@ -602,7 +614,7 @@
                                           <i class="fa fa-square-o " ng-hide="contact.decision_maker" ng-click="contact.decision_maker=true"></i></p>
   
                                         </div>
-                                         <div class="clearfix"></div>
+                                          <div class="clearfix"></div>
                                       </li>
                                       <div class="clearfix"></div>
                                   </ul>
@@ -1243,60 +1255,78 @@
 
       <!-- END PAGE CONTAINER-->
 </div>
-  
-  <!--Event Modal -->
-          <div id="newTimeModalForm" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+<!--Event Modal -->
+<div id="newTimeModalForm" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
           
             <div class="modal-body">
-                <form id="addTask"  class="ng-pristine ng-valid">
-                    <div class="inner-addon left-addon" >
-                         <i class="glyphicon glyphicon-pencil" style="color: rgba(0, 26, 131, 0.61);   margin-top: -10px;"></i>
-                             <input class="form-control calendar-form-controle" autofocus type="text" placeholder="{{_('Title ...')}}" id="taskTitle" ng-model="ioevent.title" style="padding-bottom: 20px;">                                     
-                     </div>
-                  <div class="row">
-                    <div class="col-md-8"> 
-                         <div class="oppEstDate" style="display: inline-block; float: left; max-width: 75%;">
-                                 <div  class="input-icon">
-                                     <i class="fa fa-calendar"></i>
-                                     <input lang="de" cdatetimepicker data-model="ioevent.starts_at_allday" type="text" class="form-control calendar-form-controle" placeholder="{{ _('mm/dd/yyyy hh:mm am')}}" value="" id="">
+                <form id="addTask" class="ng-pristine ng-valid">
+                    <div class="inner-addon left-addon">
+                        <i class="glyphicon glyphicon-pencil"
+                           style="color: rgba(0, 26, 131, 0.61);   margin-top: -10px;"></i>
+                        <input class="form-control calendar-form-controle" autofocus type="text"
+                               placeholder="{{_('Title ...')}}" id="taskTitle" ng-model="ioevent.title"
+                               style="padding-bottom: 20px;">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="oppEstDate" style="display: inline-block; float: left; max-width: 75%;">
+                                <div class="input-icon">
+                                    <i class="fa fa-calendar"></i>
+                                    <input lang="de" cdatetimepicker data-model="ioevent.starts_at_allday" type="text"
+                                           class="form-control calendar-form-controle"
+                                           placeholder="{{ _('mm/dd/yyyy hh:mm am')}}" value="" id="">
                                 </div>
-                                
+
+                            </div>
                         </div>
                     </div>
-                  </div>                     
-                  <div class="row">
-                    <div class="col-md-12"> 
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="  border: none !important;color: rgba(0, 0, 0, 0.44);"> 
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                        data-toggle="dropdown" aria-expanded="true"
+                                        style="  border: none !important;color: rgba(0, 0, 0, 0.44);">
 
-                            <i class="glyphicon glyphicon-bell" style="color: rgba(0, 26, 131, 0.61); margin-left: -4px;"></i>  
-                            <span>Remind me</span>  
-                            <span class="caret"></span>
+                                    <i class="glyphicon glyphicon-bell"
+                                       style="color: rgba(0, 26, 131, 0.61); margin-left: -4px;"></i>
+                                    <span>Remind me</span>
+                                    <span class="caret"></span>
 
-                        </button> 
-                        <span ng-show="something_picked" style="border: 1px solid rgba(10, 18, 168, 0.258824);padding: 3px; color: rgb(108, 108, 108);border-radius: 3px !important;background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a href="" ng-click="deletePicked()" class=" calendar-close-invite"  style=" top: 2px !important;"></a></span> 
+                                </button>
+                                <span ng-show="something_picked"
+                                      style="border: 1px solid rgba(10, 18, 168, 0.258824);padding: 3px; color: rgb(108, 108, 108);border-radius: 3px !important;background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a
+                                        href="" ng-click="deletePicked()" class=" calendar-close-invite"
+                                        style=" top: 2px !important;"></a></span>
 
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No notification</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At time of event</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30 minutes before</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1 hour </a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1 day </a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1 week </a></li>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No
+                                        notification</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At
+                                        time of event</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30
+                                        minutes before</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1
+                                        hour </a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1
+                                        day </a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1
+                                        week </a></li>
 
-                        </ul>
-                      </div>
-                  </div> 
-                  </div>
-                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
                 </form>
             </div>
             <div class="modal-footer " style="border-top:none!important;">
               <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="cancelAddOperation()">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn red" value="{{_('Add')}}" ng-click="addEvent(ioevent)">
+                <input ng-hide="isLoading" type="submit" class="btn red" value="{{_('Add')}}"
+                       ng-click="addEvent(ioevent)">
                 <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
 
 
