--- a/templates/cases/case_new.html
+++ b/templates/cases/case_new.html
@@ -1,35 +1,92 @@
-<div class="row subHeader">
-  <div class="currentApp">
-       <div class="btn-group">
-           <a class="filterItem" href="#" data-toggle="dropdown" >
-            {{active_app.label}}
-            <i class="icon-angle-down fa fa-angle-down"></i>
-           </a>
-           <ul class="dropdown-menu">
-            {%for application in apps %}
+<div class="row subHeader actionsBar">
+    <table style="width:100%;height: 55px;">
+        <tbody>
+        <tr>
+            <td class="appTd">
+                <div class="btn-group">
+                    <a class="filterItem" href="#" data-toggle="dropdown" style="margin-right:0px">
+                        {% if active_app.label =="Relationships" %}
+                        <img class="app_icon" src="static/img/sm-iogrow-true.png"
+                             style="display:inline-block;height: 20px;margin-right: 3px;">
+                        {% else%}
+                        <img class="app_icon" src="static/img/admin_min.png"
+                             style="display:inline-block;height: 20px;margin-right: 3px;">
+                        {% endif %}
+                        <span class="hide_sm">{{_(active_app.label)}}</span>
+                        <i class="icon-angle-down fa fa-angle-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        {%for application in apps %}
+                        {% if application.label =="Relationships" %}
+                        <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon" src="static/img/sm-iogrow-true.png"  style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a>
+                        </li>
+                        {% else%}
+                        <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon" src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a>
+                        </li>
 
-                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{application.label}}</a></li>
+                        {% endif %}
 
-            {%endfor%}
-           </ul>
-        </div>
-    </div>
-  <div class=" subHeaderContent">
-    <div class="col-md-9">
-    <h2 class="page-title">
-      <a href="/#/cases" data-toggle="tooltip" data-placement="bottom" title="Back to cases">
-        <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
-      </a>
-      {{_("Cases")}} >
-        <%= casee.name %>
-    </h2>
-     <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="validateBeforeSave(casee)">{{ _('Create')}}</button>
-  </div>
-    
-          
-  </div>
+
+                        {%endfor%}
+                    </ul>
+                </div>
+            </td>
+            <td>
+                <div class="col-md-9 mainHeader">
+                    <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+                        <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
+                            <a href="/#/cases" data-toggle="tooltip" data-placement="bottom"
+                               title="Back to Cases">
+                                <img src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif"
+                                     style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;"
+                                     border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <a class="btn red newAccountBtnOnscroll pull-right" ng-click="validateBeforeSave(casee)">
+                        <span><i class="fa fa-save"></i> Save</span>
+                    </a>
+                    <button class="btn btn-default newAccountBtn pull-right" ng-click="clearCase()"
+                            style="margin-right:5px"><i class="fa fa-trash-o"></i>{{ _(' Clear')}}
+                    </button>
+                </div>
+                <div class="col-md-3">
+                    <div style=" padding-left: 10px;" class="pull-right">
+                        {%for application in apps %}
+                        {%if application.label =="Admin Console" %}
+                        <a href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings"
+                           style="margin-left: 20px; margin-right: 12px;">
+                            <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                        </a>
+                        {%endif%}
+                        {%endfor%}
+                        <div class="btn-group show_sm"
+                             style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                            <a class="headerBtn" title="More" data-toggle="dropdown">
+                                <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>
+                            </a>
+                            <ul class="dropdown-menu drp-dwn-right">
+                                {%for application in apps %}
+                                {%if application.label =="Admin Console" %}
+                                <li>
+                                    <a href="/apps/{{ application.key.id() }}" class="" title="Settings">
+                                        <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                                        Settings
+                                    </a>
+                                </li>
+                                {%endif%}
+                                {%endfor%}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
 </div>
-<div  class="page-content">
+<div  class="page-content" style='margin-top: 45px; margin-left: 190px;'>
   <div class="loader-container row" ng-show="isLoading">
     <div class="loader-dialog col-md-4 col-md-offset-4 ">
       <div class="loader-content">
@@ -48,11 +105,6 @@
   <div class="row" >
    <div class="col-md-9">
       <div class="row">
-          <div class="showPage col-md-12 newActionsBtn">
-          <span>{{ _('Create Case')}} </span>
-          <button class="btn red newAccountBtn pull-right" ng-click="validateBeforeSave(casee)">{{ _('Create')}}</button>
-          <div class="clearfix"></div>
-        </div>
     <div class="showPage slimForm col-md-12 margin-bottom-15">
       <div class="row">
         <div class="col-md-12">
@@ -75,14 +127,14 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <div class="col-md-12" ng-class="{ 'has-error': case_err.account && case_err.contact}">
-                        <input type="text" required ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in contactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{ _('Contact')}}">
+                        <input type="text" typeahead-loading="conSearchLoading" ng-class="{'spinner':conSearchLoading}" required ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in getResults($viewValue,'/crmengine/v1/contacts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{ _('Contact')}}">
                       </div>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
                       <div class="col-md-12" ng-class="{ 'has-error': case_err.account && case_err.contact}">
-                        <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{ _('Account')}}">
+                        <input type="text" required  typeahead-loading="accSearchLoading" ng-class="{'spinner':accSearchLoading}" ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in getResults($viewValue,'/crmengine/v1/accounts/search') | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{ _('Account')}}">
                       </div>
                     </div>
                   </div>
